--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,101 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 240 10% 3.9%;
+
+        --card: 0 0% 100%;
+        --card-foreground: 240 10% 3.9%;
+
+        --popover: 0 0% 100%;
+        --popover-foreground: 240 10% 3.9%;
+
+        --primary: 221 83% 53%;
+        --primary-foreground: 214 100% 97%;
+
+        --secondary: 240 5% 34%;
+        --secondary-foreground: 0 0% 98%;
+
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
+
+        --accent: 214 95% 93%;
+        --accent-foreground: 240 10% 4%;
+
+        --danger: 0 72% 51%;
+        --danger-foreground: 0 86% 97%;
+
+        --success: 142 76% 36%;
+        --success-foreground: 138 76% 97%;
+
+        --info: 199 95% 74%;
+        --info-foreground: 204 80% 16%;
+
+        --warning: 21 90% 48%;
+        --warning-foreground: 33 100% 96%;
+
+        --dark: 240 5.9% 10%;
+        --dark-foreground: 0 0% 98%;
+
+        --border: 240 6% 90%;
+        --input: 240 6% 90%;
+        --ring: 213 97% 87%;
+
+        --radius: 0.7rem;
+    }
+
+    .dark {
+        --background: 240 10% 3.9%;
+        --foreground: 0 0% 98%;
+
+        --card: 240 10% 3.9%;
+        --card-foreground: 0 0% 98%;
+
+        --popover: 240 10% 3.9%;
+        --popover-foreground: 0 0% 98%;
+
+        --primary: 224 76% 48%;
+        --primary-foreground: 214 100% 97%;
+
+        --secondary: 240 5% 26%;
+        --secondary-foreground: 0 0% 98%;
+
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
+
+        --accent: 226 57% 21%;
+        --accent-foreground: 214 100% 97%;
+
+        --danger: 0 74% 42%;
+        --danger-foreground: 0 86% 97%;
+
+        --success: 142 72% 29%;
+        --success-foreground: 138 76% 97%;
+
+        --info: 200 98% 39%;
+        --info-foreground: 204 100% 97%;
+
+        --warning: 17 88% 40%;
+        --warning-foreground: 33 100% 96%;
+
+        --dark: 0 0% 98%;
+        --dark-foreground: 240 5.9% 10%;
+
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 226 57% 21%;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@layer base {
+    * {
+        @apply border-border;
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
